--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.16.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.4",
     "telegraf": "^4.16.3",
+    "xlsx": "^0.18.5",
     "xss": "^1.0.15"
   },
   "devDependencies": {
