--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@prisma/client": "^5.16.1",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
+    "install": "^0.13.0",
     "nodemon": "^3.1.4",
+    "npm": "^10.8.2",
     "telegraf": "^4.16.3",
     "telegraf-postgres-session": "^1.0.5",
     "xlsx": "^0.18.5",
